// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> should render chip 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: transparent;
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c11 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c13:hover {
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div {
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

@media screen and (min-width:320px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-5-label"
      class="c0"
      data-blade-component="chip-group"
      role="radiogroup"
    >
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c1"
          data-blade-component="visually-hidden"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            Select fruits
          </p>
        </div>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-3-helptext-4"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Chip /> should render chip with icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: transparent;
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 8px;
}

.c11 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c13:hover {
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div {
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c15 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

@media screen and (min-width:320px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-11-label"
      class="c0"
      data-blade-component="chip-group"
      role="radiogroup"
    >
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c1"
          data-blade-component="visually-hidden"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            Select fruits
          </p>
        </div>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-12-helptext-13"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c14"
                          data-blade-component="base-box"
                        >
                          <svg
                            aria-hidden="true"
                            class="Svgweb__StyledSvg-vcmjs8-0"
                            data-blade-component="icon"
                            fill="none"
                            height="12px"
                            viewBox="0 0 24 24"
                            width="12px"
                          >
                            <path
                              d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                            />
                            <path
                              d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <p
                          class="c15"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-14-helptext-15"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c14"
                          data-blade-component="base-box"
                        >
                          <svg
                            aria-hidden="true"
                            class="Svgweb__StyledSvg-vcmjs8-0"
                            data-blade-component="icon"
                            fill="none"
                            height="12px"
                            viewBox="0 0 24 24"
                            width="12px"
                          >
                            <path
                              d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                            />
                            <path
                              d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                              data-blade-component="svg-path"
                              fill="hsla(216, 27%, 36%, 1)"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <p
                          class="c15"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Chip /> should set disabled state with isDisabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: transparent;
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
}

.c11 {
  background-color: transparent;
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c16 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-color: hsla(216,19%,89%,1);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c17:hover {
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c15 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c15:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c15:hover + div {
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c14 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c18 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

@media screen and (min-width:320px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c10 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-21-label"
      class="c0"
      data-blade-component="chip-group"
      role="radiogroup"
    >
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c1"
          data-blade-component="visually-hidden"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            Select fruits
          </p>
        </div>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: not-allowed;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-22-helptext-23"
                      aria-disabled="true"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      disabled=""
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10 c11"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c14"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="chip"
            >
              <label
                class="c6"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c7"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-24-helptext-25"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c15"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10 c16"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c17"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c18"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
